Fix python for scala 2.13 migration

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,38 +7,44 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN DEBIAN_FRONTEND=noninteractive  \
     apt-get update && apt-get install -y \
     curl \
-    openjdk-11-jdk \
+    openjdk-17-jdk \
     unzip \
     zip \
     git \
     software-properties-common \
-    python3-pip  && \
+    python3-pip && \ 
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && apt-get install -y \
-    python3.7 \
-    python3.8 \
+    python3.9  \
+    python3.9-distutils \
+    python3.9-venv \
     python3.10  \
+    python3.10-distutils \
+    python3.10-venv \
+    python3.11  \
+    python3.12  \
+    python3.13  \
     tox \
     && rm -rf /var/lib/apt/lists/*
 
 RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.10 1
 
-ARG USERNAME=mleap
-ARG USER_UID=1000
-ARG USER_GID=$USER_UID
+# ARG USERNAME=mleap
+# ARG USER_UID=1001
+# ARG USER_GID=$USER_UID
 
-# Create the user
-RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME --shell /usr/bin/bash
+# # Create the user
+# RUN (groupadd --gid $USER_GID $USERNAME || true) \
+#     && useradd --uid $USER_UID --gid $USER_GID -m $USERNAME --shell /usr/bin/bash
 
-USER $USERNAME
+# USER $USERNAME
 
 # Install SDKMAN and Scala
 SHELL ["/bin/bash", "-c"]
 
 RUN curl -s "https://get.sdkman.io" | bash \
     && source "$HOME/.sdkman/bin/sdkman-init.sh" \
-    && sdk install scala 2.12.18 \
+    && sdk install scala 2.13.16 \
     && sdk install sbt
 
 # Set up your environment as needed
