--- a/python/Makefile
+++ b/python/Makefile
@@ -5,7 +5,7 @@ $(error SCALA_CLASS_PATH for python tests is not set. Please check out \
 the top-level Makefile on how to source scala_classpath_for_python.sh)
 endif
 
-.PHONY: help env clean py37_test py38_test test build upload
+.PHONY: help env clean test build upload
 
 help:
 	@echo "  env         create a development environment using virtualenv"
@@ -25,13 +25,11 @@ clean:
 	find . -name '*~' -exec rm -f {} \;
 	find . -name '__pycache__' | xargs -r rm -rf
 
-py37_test:
-	tox -e py37
+test_%:
+	tox -e $*
 
-py38_test:
-	tox -e py38
-
-test: py37_test py38_test
+test:
+	tox 
 	@echo "All python tests completed"
 
 build: clean
