--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,23 +1,25 @@
 [tox]
-envlist = py37,py38
+envlist = py39,py310,py311,py312,py313
 skipdist = true
 
 [testenv]
+usedevelop = true
 passenv =
     SCALA_CLASS_PATH
     JAVA_HOME
     SBT
 deps =
+    pip>=24.0
+    setuptools>=70.0
+    wheel>=0.41.0
     -rrequirements-dev.txt
     -rrequirements.txt
-commands =
-        nosetests --with-coverage \
-                --cover-package=mleap \
-                --nologcapture -s \
-                --exclude-dir=mleap/pyspark \
-                --verbose \
-                --where ./ \
-                {posargs}
+commands = pytest \
+    --cov=mleap \
+    -s \
+    -v \
+    tests \
+    {posargs}
 
 [testenv:venv]
 envdir = venv
