--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,23 @@
----
 name: Test
 
 on:
   push:
-    branches: [master, feature/**]
+    branches: [ master, feature/** ]
   pull_request:
-    branches: [master, feature/**]
+    branches: [ master, feature/** ]
 
 jobs:
-  build-container:
-    name: Build devcontainer
+  mleap-executor-tests:
+    name: MLeap executor tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      
       - name: Build devcontainer image
         uses: docker/build-push-action@v5
         with:
@@ -25,140 +26,209 @@ jobs:
           push: false
           load: true
           tags: mleap:ci
-
-  mleap-executor-tests:
-    name: MLeap executor tests
-    runs-on: ubuntu-latest
-    needs: build-container
-    container:
-      image: mleap:ci
-      options: --user root
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: recursive
+      
       - name: Run MLeap executor tests
-        run: make test_executor
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root mleap:ci make test_executor
 
   mleap-benchmark-tests:
     name: MLeap benchmark tests
     runs-on: ubuntu-latest
-    needs: build-container
-    container:
-      image: mleap:ci
-      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build devcontainer image
+        uses: docker/build-push-action@v5
+        with:
+          context: .devcontainer
+          file: .devcontainer/Dockerfile
+          push: false
+          load: true
+          tags: mleap:ci
+      
       - name: Run MLeap benchmark tests
-        run: make test_benchmark
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root mleap:ci make test_benchmark
 
   mleap-sbt-tests:
     name: All other sbt tests
     runs-on: ubuntu-latest
-    needs: build-container
-    container:
-      image: mleap:ci
-      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build devcontainer image
+        uses: docker/build-push-action@v5
+        with:
+          context: .devcontainer
+          file: .devcontainer/Dockerfile
+          push: false
+          load: true
+          tags: mleap:ci
+      
       - name: Run sbt tests
-        run: make test_root_sbt_project
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root mleap:ci make test_root_sbt_project
 
   python39-tests:
     name: Python 3.9 tests
     runs-on: ubuntu-latest
-    needs: build-container
-    container:
-      image: mleap:ci
-      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build devcontainer image
+        uses: docker/build-push-action@v5
+        with:
+          context: .devcontainer
+          file: .devcontainer/Dockerfile
+          push: false
+          load: true
+          tags: mleap:ci
+      
       - name: Run Python 3.9 tests
-        run: make test_python39
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root mleap:ci make test_python39
 
   python310-tests:
     name: Python 3.10 tests
     runs-on: ubuntu-latest
-    needs: build-container
-    container:
-      image: mleap:ci
-      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build devcontainer image
+        uses: docker/build-push-action@v5
+        with:
+          context: .devcontainer
+          file: .devcontainer/Dockerfile
+          push: false
+          load: true
+          tags: mleap:ci
+      
       - name: Run Python 3.10 tests
-        run: make test_python310
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root mleap:ci make test_python310
 
   python311-tests:
     name: Python 3.11 tests
     runs-on: ubuntu-latest
-    needs: build-container
-    container:
-      image: mleap:ci
-      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build devcontainer image
+        uses: docker/build-push-action@v5
+        with:
+          context: .devcontainer
+          file: .devcontainer/Dockerfile
+          push: false
+          load: true
+          tags: mleap:ci
+      
       - name: Run Python 3.11 tests
-        run: make test_python311
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root mleap:ci make test_python311
 
   python312-tests:
     name: Python 3.12 tests
     runs-on: ubuntu-latest
-    needs: build-container
-    container:
-      image: mleap:ci
-      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build devcontainer image
+        uses: docker/build-push-action@v5
+        with:
+          context: .devcontainer
+          file: .devcontainer/Dockerfile
+          push: false
+          load: true
+          tags: mleap:ci
+      
       - name: Run Python 3.12 tests
-        run: make test_python312
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root mleap:ci make test_python312
 
   python313-tests:
     name: Python 3.13 tests
     runs-on: ubuntu-latest
-    needs: build-container
-    container:
-      image: mleap:ci
-      options: --user root
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build devcontainer image
+        uses: docker/build-push-action@v5
+        with:
+          context: .devcontainer
+          file: .devcontainer/Dockerfile
+          push: false
+          load: true
+          tags: mleap:ci
+      
       - name: Run Python 3.13 tests
-        run: make test_python313
+        run: |
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root mleap:ci make test_python313
 
   publish:
     name: Publish signed jars
     runs-on: ubuntu-latest
-    needs:
-      - build-container
-      - mleap-executor-tests
-      - mleap-benchmark-tests
-      - mleap-sbt-tests
-      - python39-tests
-      - python310-tests
-      - python311-tests
-      - python312-tests
-      - python313-tests
-    container:
-      image: mleap:ci
-      options: --user root
+    needs: [mleap-executor-tests, mleap-benchmark-tests, mleap-sbt-tests, python39-tests, python310-tests, python311-tests, python312-tests, python313-tests]
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build devcontainer image
+        uses: docker/build-push-action@v5
+        with:
+          context: .devcontainer
+          file: .devcontainer/Dockerfile
+          push: false
+          load: true
+          tags: mleap:ci
+      
       - name: Publish signed jars
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
@@ -166,8 +236,10 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
         run: |
-          source travis/extract.sh
-          source travis/docker.sh
-          sbt "+ publishSigned" \
-            "mleap-serving/docker:publish" \
-            "mleap-spring-boot/docker:publish"
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            --user root \
+            -e SONATYPE_USERNAME="$SONATYPE_USERNAME" \
+            -e SONATYPE_PASSWORD="$SONATYPE_PASSWORD" \
+            -e GPG_PASSPHRASE="$GPG_PASSPHRASE" \
+            -e GPG_SECRET_KEY="$GPG_SECRET_KEY" \
+            mleap:ci bash -c "source travis/extract.sh && source travis/docker.sh && sbt '+ publishSigned' 'mleap-serving/docker:publish' 'mleap-spring-boot/docker:publish'"
