--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -207,10 +207,19 @@ jobs:
           docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
             --user root mleap:ci make test_python_313
 
+  ci-completion:
+    runs-on: ubuntu-latest
+    needs: [mleap-executor-tests, mleap-benchmark-tests, mleap-sbt-tests, python39-tests, python310-tests, python311-tests, python312-tests, python313-tests]
+    if: always() # Required so this runs even if a dependency fails
+    steps:
+      - name: Check overall status
+        if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
+        run: exit 1
+
   publish:
     name: Publish signed jars
     runs-on: ubuntu-latest
-    needs: [mleap-executor-tests, mleap-benchmark-tests, mleap-sbt-tests, python39-tests, python310-tests, python311-tests, python312-tests, python313-tests]
+    needs: [ci-completion]
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - uses: actions/checkout@v3
