--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py37,py38
+envlist = py37,py38,py39,py310,py311,py312
 skipdist = true
 
 [testenv]
+usedevelop = true
 passenv =
     SCALA_CLASS_PATH
     JAVA_HOME
@@ -10,14 +11,12 @@ passenv =
 deps =
     -rrequirements-dev.txt
     -rrequirements.txt
-commands =
-        nosetests --with-coverage \
-                --cover-package=mleap \
-                --nologcapture -s \
-                --exclude-dir=mleap/pyspark \
-                --verbose \
-                --where ./ \
-                {posargs}
+commands = pytest \
+    --cov=mleap \
+    -s \
+    -v \
+    tests \
+    {posargs}
 
 [testenv:venv]
 envdir = venv
