--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -254,6 +254,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
       - name: Build devcontainer image
         uses: docker/build-push-action@v5
         with:
@@ -269,6 +275,8 @@ jobs:
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
           docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
             --user root \
@@ -276,4 +284,6 @@ jobs:
             -e SONATYPE_PASSWORD="$SONATYPE_PASSWORD" \
             -e GPG_PASSPHRASE="$GPG_PASSPHRASE" \
             -e GPG_SECRET_KEY="$GPG_SECRET_KEY" \
-            mleap:ci bash -c "source travis/extract.sh && source travis/docker.sh && sbt '+ publishSigned' 'mleap-serving/docker:publish' 'mleap-spring-boot/docker:publish'"
+            -e TWINE_USERNAME="$TWINE_USERNAME" \
+            -e TWINE_PASSWORD="$TWINE_PASSWORD" \
+            mleap:ci bash sbt publishSigned
