--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -246,6 +246,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ci-completion]
     if: github.event_name == 'release' && github.event.action == 'published'
+    services:
+      dind:
+        image: docker:dind
+        options: --privileged
+        ports:
+          - 2375:2375
     steps:
       - uses: actions/checkout@v3
         with:
@@ -253,6 +259,12 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build devcontainer image
         uses: docker/build-push-action@v5
@@ -269,6 +281,11 @@ jobs:
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
+          encrypted_21bd84d1dece_key: ${{ secrets.ENCRYPTED_21BD84D1DECE_KEY }}
+          encrypted_21bd84d1dece_iv: ${{ secrets.ENCRYPTED_21BD84D1DECE_IV }}
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+          DOCKER_HOST: tcp://dind:2375
         run: |
           docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
             --user root \
@@ -276,4 +293,9 @@ jobs:
             -e SONATYPE_PASSWORD="$SONATYPE_PASSWORD" \
             -e GPG_PASSPHRASE="$GPG_PASSPHRASE" \
             -e GPG_SECRET_KEY="$GPG_SECRET_KEY" \
-            mleap:ci bash -c "source travis/extract.sh && source travis/docker.sh && sbt '+ publishSigned' 'mleap-serving/docker:publish' 'mleap-spring-boot/docker:publish'"
+            -e encrypted_21bd84d1dece_key="$encrypted_21bd84d1dece_key" \
+            -e encrypted_21bd84d1dece_iv="$encrypted_21bd84d1dece_iv" \
+            -e TWINE_USERNAME="$TWINE_USERNAME" \
+            -e TWINE_PASSWORD="$TWINE_PASSWORD" \
+            -e DOCKER_HOST="$DOCKER_HOST" \
+            mleap:ci bash travis/publish.sh
